# hurry

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: backend.rs  capabilities.rs  lib.rs  main.rs  progress.rs
src/handlers/: definition.rs  diagnostics.rs  document_links.rs  document_symbols.rs  folding.rs  hover.rs  mod.rs  references.rs  selection.rs  semantic_tokens.rs  workspace_symbols.rs
src/parsing/: document.rs  haddock.rs  haskell.rs  mod.rs
src/symbols/: extract.rs  index.rs  mod.rs  types.rs
src/workspace/: deps.rs  mod.rs  scanner.rs
tests/: dump_tree.rs  lsp_handlers.rs
tests/fixtures/: cross_ref.hs  folding_test.hs  hover_test.hs  simple_module.hs  usage.hs  with_errors.hs
