[package]
name = "hurry"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
simple_logger = { version = "5", features = ["timestamps"] }
dashmap = "6.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.8"
tree-sitter-haskell = "0.23"
